k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/grpc-services: "echo-server"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - path: /com.example.grpc.protodefine.HelloWorld
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port: 
              number: 9092 
      - path: /grpc
        pathType: Prefix
        backend:
          service:
            name: echo-server
            port: 
              number: 8080
